More compact display for indicator charts page

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2138,7 +2138,7 @@ resource.common.monitor.visibility.AvailabilityTH=Availability
 resource.common.monitor.visibility.UsageTH=Throughput
 resource.common.monitor.visibility.PerformanceTH=Performance
 resource.common.monitor.visibility.UtilizationTH=Utilization
-resource.common.monitor.visibility.availability.value=Availability - ({0})
+resource.common.monitor.visibility.availability.value={0} - Availability
 
 resource.common.monitor.visibility.GoToResource=Go to Resource(s)
 resource.common.monitor.visibility.GetCurrentValuesLabel=Get Current Values:
@@ -2265,6 +2265,7 @@ resource.server.monitor.visibility.error.PlatformPermission=Insufficient privile
 resource.common.monitor.visibility.CompareMetricsReturnLink=&lt;&lt; Return to {0} Monitor: Visibility
 
 # RESOURCE.COMMON.MONITOR CHARTS
+resource.common.monitor.visibility.IndicatorCharts=Indicator Charts
 resource.common.monitor.visibility.ChartTitle=HQ Chart
 resource.common.monitor.visibility.SingleResourceChartPageTitle={0}: {1} Chart
 resource.common.monitor.visibility.MultipleMetric=Multiple Metric
