Remove dash from Advanced Settings... and change another to en dash

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2138,7 +2138,7 @@ resource.common.monitor.visibility.AvailabilityTH=Availability
 resource.common.monitor.visibility.UsageTH=Throughput
 resource.common.monitor.visibility.PerformanceTH=Performance
 resource.common.monitor.visibility.UtilizationTH=Utilization
-resource.common.monitor.visibility.availability.value={0} - Availability
+resource.common.monitor.visibility.availability.value={0} &#x2014; Availability
 
 resource.common.monitor.visibility.GoToResource=Go to Resource(s)
 resource.common.monitor.visibility.GetCurrentValuesLabel=Get Current Values:
@@ -2214,7 +2214,7 @@ resource.common.monitor.visibility.metricsToolbar.CollectionPoints=Collection Po
 resource.common.monitor.visibility.metricsToolbar.Minutes=Minutes
 resource.common.monitor.visibility.metricsToolbar.Hours=Hours
 resource.common.monitor.visibility.metricsToolbar.Days=Days
-resource.common.monitor.visibility.metricsToolbar.AdvancedSettingsBtn=- Advanced Settings...
+resource.common.monitor.visibility.metricsToolbar.AdvancedSettingsBtn=Advanced Settings...
 resource.common.monitor.visibility.metricsToolbar.DateRange={0} to {1}
 resource.common.monitor.visibility.metricsToolbar.EditRangeBtn=- Edit Range...
 resource.common.monitor.visibility.metricsToolbar.SwitchToSimpleBtn=Switch to Simple Settings
