Change inventory properties button text and color

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -905,6 +905,7 @@ resource.common.quickFavorites.add=Add to Dashboard Favorites
 resource.common.quickFavorites.remove=Remove from Dashboard Favorites
 
 # RESOURCE GENERAL PROPERTIES
+resource.common.inventory.props.PropertiesBtn=<i>{0}</i> Properties
 resource.common.inventory.props.GeneralPropertiesTab=General Properties
 resource.common.inventory.props.LocationLabel=Location:
 resource.common.inventory.props.OwnerLabel=Owner:
