--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2614,3 +2614,6 @@ resource.common.monitor.label.events.Control=Control Actions
 
 resource.common.alert.action.acknowledge.label=ACKNOWLEDGE
 resource.common.alert.action.fixed.label=FIXED
+
+# Informational Text
+inform.config.escalation.scheme.newescalation.escalationexplanation=An escalation scheme allows you to order alert notifications and actions. It can be applied to one or more alert definitions.
