--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -34,6 +34,9 @@ hibernate.jdbc.batch_versioned_data=true
 # Enable? JDBC3 PreparedStatement.getGeneratedKeys()
 hibernate.jdbc.use_get_generated_keys=true
 
+# Rely on Hibernate binding to the JTA transaction and flushing on commit
+hibernate.flush_before_completion=true
+
 # JPA compliance
 hibernate.query.jpaql_strict_compliance=false
 
