changing case of the buttons in the metrics page and adding button text for view metrics in the metrics page

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -66,6 +66,7 @@ common.header.EscalationName=Escalation Name
 common.label.EscalationSchemeActions=Escalation Scheme Actions:
 common.label.SkipResources=Skip Checked Resources
 common.label.AddtoInventory=Add to Inventory
+common.label.ViewMetrics=View Metrics
 
 common.value.parenthesis=({0})
 common.value.notavail=N/A
@@ -879,7 +880,7 @@ resource.hub.legend.suspended=Suspended
 resource.common.confirm.ResourcesRemoved=The selected resources have been removed. 
 
 resource.navmap.linktext=MAP
-resource.toolsmenu.text=TOOLS MENU
+resource.toolsmenu.text=Tools Menu
 
 # RESOURCE GENERAL ERRORS
 resource.common.error.ResourceNotFound=The specified resource does not exist.
