[HHQ-538] Recent Resources is no longer a portlet

--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -41,7 +41,7 @@
 
 .dashcontent.portal.portlets.first=|.dashContent.searchResources|.dashContent.savedCharts|.dashContent.recentlyApproved|.dashContent.availSummary
 
-.dashcontent.portal.portlets.second=|.dashContent.autoDiscovery|.dashContent.resourceHealth|.dashContent.criticalAlerts|.dashContent.recentResources
+.dashcontent.portal.portlets.second=|.dashContent.autoDiscovery|.dashContent.resourceHealth|.dashContent.criticalAlerts
 
 .dashContent.controlActions.lastCompleted=5
 .dashContent.controlActions.mostFrequent=5
