Add support for viewing GalertLog

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1815,6 +1815,8 @@ alert.config.edit.notification.PageTitle=Edit {0}: Alert Notification Action
 alert.config.edit.snmp.address=Address of the target SNMP engine:
 alert.config.edit.snmp.oid=OID:
 
+alert.view.details=Details:
+
 # MONITORING: EVENTS
 monitoring.events.MiniTabs.Roles=Notify Roles
 monitoring.events.MiniTabs.Users=Notify HQ Users
