[HHQ-564] Use similar Javascript as admin section's ViewEscalation.jsp so that the information is similarly displayed

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -64,6 +64,7 @@ common.label.CreateNew=Create New
 common.label.AddAction=Create Action
 common.header.EscalationName=Escalation Name
 common.label.EscalationSchemeActions=Escalation Scheme Actions:
+common.label.EscalationActionLogs=Escalation Action Logs:
 common.label.SkipResources=Skip Checked Resources
 common.label.AddtoInventory=Add to Inventory
 common.label.ViewMetrics=View Metrics
