fix the display of errors for missing email addresses in escalation actions when selecting 'others'

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2060,7 +2060,8 @@ events.alert.AlertNotificationActionTitle=Alert Notification Action
 # MONITORING: EVENTS: ERRORS / CONFIRMATIONS
 alert.config.error.InvalidEmailAddress=The email addresses {0} has invalid syntax: {1}.
 alert.config.error.InvalidEmailAddresses=One or more of the email addresses entered had invalid syntax: {0}.
-alert.config.error.invaliEmailAddresInput=One or more of the email addresses entered has illegal characters
+alert.config.error.invalidEmailAddressInput=One or more of the email addresses entered has illegal characters.
+alert.config.error.noEmailAddressInput=You have not entered any email addresses in.
 alert.config.error.NoMetricSelected=You must select a metric for this condition.
 alert.config.error.NoCustomPropertySelected=You must select an inventory property for this condition.
 alert.config.error.NoControlActionSelected=You must select a control action for this condition.
