Remove excessive capital letters for alert stuffs

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1962,12 +1962,12 @@ alert.config.props.CB.LogLevel=Event/Log Level
 
 # MONITORING: EVENTS: ALERT NOTIFICATION
 alert.current.detail.notify.Tab=Notification Actions
-alert.current.detail.notify.Roles=Roles Notified:
-alert.current.detail.notify.OR=Other Recipients Notified:
-alert.current.detail.notify.CAM=HQ Users Notified:
+alert.current.detail.notify.Roles=Notified roles:
+alert.current.detail.notify.OR=Notified:
+alert.current.detail.notify.CAM=Notified users:
 alert.current.detail.escalation.action=Action {0}:
 alert.config.props.NB.Email=Email
-alert.config.props.NB.Via=Notify Via
+alert.config.props.NB.Via=Notify via
 alert.config.props.NB.Members=Members
 alert.config.props.NB.FirstName=First Name
 alert.config.props.NB.LastName=Last Name
