moving text into fmt message on the metrics page

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2622,3 +2622,6 @@ resource.common.alert.action.fixed.label=FIXED
 
 # Informational Text
 inform.config.escalation.scheme.newescalation.escalationexplanation=An escalation scheme allows you to order alert notifications and actions. It can be applied to one or more alert definitions.
+inform.resource.common.monitor.visibility.infoStep1=Step 1: Select resources in the list above
+inform.resource.common.monitor.visibility.infoStep2=Step 2: Click "View Metrics"
+inform.resource.common.monitor.visibility.infoStep3=Step 3: Click an arrow in the list below to see its chart
