[HQ-453] Show the "last" time of problem occurrence in RSS

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -605,7 +605,7 @@ dash.home.MetricViewer=Metric Viewer
 
 dash.home.ProblemResources.seeAll=[See All]
 dash.home.ProblemResources.timeRange=From {0} to {1}.
-dash.home.ProblemResources.rss.item.description=Current Availability ({0}), Alert Count({1}), OOB Count({2})
+dash.home.ProblemResources.rss.item.description=Current Availability ({0}), Alert Count({1}), OOB Count({2}), Last Problem ({3})
 
 dash.home.no.resource.to.display=No resources to display
 dash.home.add.resources.to.display=No resources to display, please click the <img src="{0}images/dash-icon_edit.gif"/> icon above to add resources to portlet.
@@ -690,7 +690,7 @@ dash.home.TableHeader.FrequentActions=Most Frequent Control Action
 dash.home.TableHeader.NewResources=New Resources
 dash.home.TableHeader.Problem=Problem
 dash.home.TableHeader.SuggestedAction=Suggested Action
-dash.home.TableHeader.OOB=O.O.B.
+dash.home.TableHeader.OOB=OOB
 dash.home.TableHeader.Metric=Metric
 
 dash.home.DisplayCategory.AppTotal=Application Total
@@ -2093,7 +2093,7 @@ resource.common.monitor.visibility.MiniTab.ChildResourceMetrics={0} Metrics
 resource.common.monitor.visibility.MiniTab.All=All Metrics
 resource.common.monitor.visibility.MiniTab.Problems=Problem Metrics
 resource.common.monitor.visibility.MiniTab.Alerts=Alerts
-resource.common.monitor.visibility.MiniTab.OOB=O.O.B.
+resource.common.monitor.visibility.MiniTab.OOB=OOB
 resource.common.monitor.visibility.MiniTab.More=&nbsp;
 resource.common.monitor.visibility.problemMetric.Began=Problems began:
 resource.common.monitor.visibility.problemMetric.FullChart=View Full Chart
