changed the styleing on the escalation creation page-removed the bright orange boxes

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2626,3 +2626,4 @@ inform.resource.common.monitor.visibility.SelectResources=Select Resources above
 inform.resource.common.monitor.visibility.infoStep1=Step 1: Select resources in the list above
 inform.resource.common.monitor.visibility.infoStep2=Step 2: Click "View Metrics"
 inform.resource.common.monitor.visibility.infoStep3=Step 3: Click an arrow in the list below to see its chart
+inform.config.escalation.scheme.newAction.dragaction=Drag individual actions to change the order of events
