--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2627,3 +2627,4 @@ inform.resource.common.monitor.visibility.infoStep1=Step 1: Select resources in 
 inform.resource.common.monitor.visibility.infoStep2=Step 2: Click "View Metrics"
 inform.resource.common.monitor.visibility.infoStep3=Step 3: Click an arrow in the list below to see its chart
 inform.config.escalation.scheme.newAction.dragaction=Drag individual actions to change the order of events
+inform.config.escalation.scheme.newAction.noactions=Currently there are no actions for this escalation. Click on the "Create Action" button below to create an action to perform when this escalation is invoked.
