fix typo in the popup code for info on the escalation creation page

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -68,6 +68,7 @@ common.label.EscalationActionLogs=Escalation Action Logs:
 common.label.SkipResources=Skip Checked Resources
 common.label.AddtoInventory=Add to Inventory
 common.label.ViewMetrics=View Metrics
+common.label.updated=Updated:
 
 common.value.parenthesis=({0})
 common.value.notavail=N/A
