Move acknowledge link to next to alerts, still need to look at the escalation state to figure out if it's acknowledgeable at the moment; and the recent alerts portlet

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -24,6 +24,8 @@ nbsp=&nbsp;
 yesno.true=Yes
 yesno.false=No
 any=Any
+acknowledgeable.true=Acknowledge
+acknowledgeable.false=&nbsp;
 
 #exception keys
 exception.ObjectNotFoundException=could not find your object
@@ -1750,6 +1752,7 @@ alert.config.escalation.state.change=If the alert state has changed:
 alert.config.escalation.state.change.notify.previous=Notify previously notified users of the change
 alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
 alert.config.escalation.notify.who=Select who to notify...
+alert.config.escalation.unset=Unset Escalation
 alert.config.error.escalation.name.required=Escalation scheme name is required
 alert.config.error.escalation.name.dup=An escalation scheme already exists with the escalation name.  Please correct this error and submit again.
 
@@ -2028,6 +2031,7 @@ alerts.alert.AlertList.ListHeader.AlertDefinition=Alert Definition
 alerts.alert.AlertList.ListHeader.AlertCondition=Alert Condition
 alerts.alert.AlertList.ListHeader.ActualValue=Actual Value
 alerts.alert.AlertList.ListHeader.Fixed=Fixed
+alerts.alert.AlertList.ListHeader.Acknowledge=Acknowledge
 
 alerts.config.DefinitionList.Title=HQ List Alert Definitions
 alerts.config.DefinitionList.ListHeader.AlertName=Alert Name
