[HHQ-642] Break out the platform type into its own section.  It does not go away, the filter is meant for the IPs.

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1057,6 +1057,7 @@ resource.platform.inventory.NewWindowsServiceLink=New Windows Service
 resource.platform.inventory.NewProcessServiceLink=New Process Service
 resource.platform.inventory.ViewSecurityLink=View Security
 
+resource.platform.inventory.NetworkPropertiesTab=Network Properties
 resource.platform.inventory.TypeAndNetworkPropertiesTab=Type & Network Properties
 resource.platform.inventory.type.field.MachineType=Platform Type
 resource.platform.inventory.type.MachineTypeLabel=Platform Type:
