changeing the text on alert details page

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -64,7 +64,7 @@ common.label.Cancel=Cancel
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
 common.label.AddAction=Create Action
-common.header.EscalationName=Escalation Name
+common.header.EscalationName=Escalation Name:
 common.label.EscalationSchemeActions=Escalation Scheme Actions:
 common.label.EscalationActionLogs=Escalation Action Logs:
 common.label.SkipResources=Skip Checked Resources
@@ -2544,6 +2544,10 @@ resource.common.monitor.visibility.config.CollectionIntervalField=Collection Int
 resource.common.monitor.visibility.config.RTRegularExpressionsLabel=RT Regular Expressions:
 resource.common.monitor.visibility.config.CollectionIntervalLabel=Collection Interval:
 resource.common.monitor.visibility.config.RegularExpressionsLabel=Regular Expressions:
+resource.common.monitor.visibility.config.EscalationAllow.pause=User allowed to pause escalation for
+resource.common.monitor.visibility.config.EscalationAllow.continue=Escalation continued without pausing
+resource.common.monitor.visibility.config.EscalationNotify.all=Entire escalation chain is notified of the change
+resource.common.monitor.visibility.config.EscalationNotify.previous=Previously notified users are notified of the change
 #
 
 # GROUP, MONITOR, CONFIG VISIBILITY
