Use the acknowledge icon on alert lists

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -24,7 +24,7 @@ nbsp=&nbsp;
 yesno.true=Yes
 yesno.false=No
 any=Any
-acknowledgeable.true=Acknowledge
+acknowledgeable.true=<img border="0" src="/images/acknowledge.gif" alt="Acknowledge"/>
 acknowledgeable.false=&nbsp;
 
 #exception keys
@@ -2623,6 +2623,9 @@ resource.common.monitor.label.events.Control=Control Actions
 
 resource.common.alert.action.acknowledge.label=ACKNOWLEDGE
 resource.common.alert.action.fixed.label=FIXED
+
+resource.common.alert.clickToFix=Click the "Fixed" button to mark alert condition as fixed
+resource.common.alert.beenFixed=This alert has been fixed
 
 # Informational Text
 inform.config.escalation.scheme.newescalation.escalationexplanation=An escalation scheme allows you to order alert notifications and actions. It can be applied to one or more alert definitions.
