Match up the plurality

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2471,7 +2471,7 @@ resource.group.monitor.visibility.MembersTH=Group Members Health
 resource.group.monitor.visibility.NotEnabled=The Configuration Properties have not been set to enable monitoring for Resources in this Group.
 
 # Group Alerts
-resource.group.alerts.config.num.members=There are {0} member(s) in this group
+resource.group.alerts.config.num.members=There is(are) {0} member(s) in this group
 
 # RESOURCE.AUTOGROUP.MONITOR TITLE
 resource.autogroup.monitor.visibility.CurrentHealthTitle=HQ View Auto-Group Monitor Current Health - {0}
