[HQ-492] Do not allow single or double quote characters in escalation name or description

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -186,6 +186,7 @@ errors.jsp.ToSee=to see the complete stack trace.
 #
 errors.cam.general=An unknown application error occurred.
 error.input.badchars=Input should not contain any of the following characters: |, ?, &, <, >, ', "
+error.input.badquotes=Input should not contain any quote characters
 
 # FOOTER
 footer.HQ=About HQ
