Add instructions to click the acknowledge icon

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -790,6 +790,7 @@ dash.settings.controlActions.completed=completed in last
 dash.settings.controlActions.scheduled=scheduled
 dash.settings.controlActions.most.frequent=most frequently controlled on demand
 
+dash.settings.criticalAlerts.ack.instruction=Click the <img src="{0}images/acknowledge.gif"/> icon to acknowledge an alert
 dash.settings.criticalAlerts.last=Last
 dash.settings.criticalAlerts.withinThePast=or higher priority alerts within the past
 dash.settings.criticalAlerts.for=for
