--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -24,7 +24,7 @@ nbsp=&nbsp;
 yesno.true=Yes
 yesno.false=No
 any=Any
-acknowledgeable.true=<img border="0" src="/images/acknowledge.gif" alt="Acknowledge"/>
+acknowledgeable.true=<img border="0" src="/images/icon_ack.gif" alt="Acknowledge"/>
 acknowledgeable.false=&nbsp;
 
 #exception keys
@@ -790,7 +790,7 @@ dash.settings.controlActions.completed=completed in last
 dash.settings.controlActions.scheduled=scheduled
 dash.settings.controlActions.most.frequent=most frequently controlled on demand
 
-dash.settings.criticalAlerts.ack.instruction=Click the <img src="{0}images/acknowledge.gif"/> icon to acknowledge an alert
+dash.settings.criticalAlerts.ack.instruction=Click the <img src="{0}images/icon_ack.gif"/> icon to acknowledge an alert
 dash.settings.criticalAlerts.last=Last
 dash.settings.criticalAlerts.withinThePast=or higher priority alerts within the past
 dash.settings.criticalAlerts.for=for
