[HHQ-666] Display Acknowledged and Fixed confirmation messages

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1821,6 +1821,8 @@ alert.config.edit.snmp.address=Address of the target SNMP engine:
 alert.config.edit.snmp.oid=OID:
 
 alert.view.details=Details:
+alert.view.confirm.acknowledged=You have acknowledged this alert
+alert.view.confirm.fixed=You have fixed this alert
 
 # MONITORING: EVENTS
 monitoring.events.MiniTabs.Roles=Notify Roles
