--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2069,6 +2069,9 @@ alert.config.error.InvalidEmailAddress=The email addresses {0} has invalid synta
 alert.config.error.InvalidEmailAddresses=One or more of the email addresses entered had invalid syntax: {0}.
 alert.config.error.invalidEmailAddressInput=One or more of the email addresses entered has illegal characters.
 alert.config.error.noEmailAddressInput=You have not entered any email addresses in.
+alert.config.error.noMetaInput=Please enter Sys log meta information
+alert.config.error.noProductInput=Please enter Sys log product information
+alert.config.error.noVersionInput=Please enter Sys log version information
 alert.config.error.NoMetricSelected=You must select a metric for this condition.
 alert.config.error.NoCustomPropertySelected=You must select an inventory property for this condition.
 alert.config.error.NoControlActionSelected=You must select a control action for this condition.
