adding text for escalation portlet

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -603,6 +603,7 @@ dash.home.Problems=Things To Do in HQ
 dash.home.ProblemResources=Problem Resources
 dash.home.AvailSummary=Availability Summary
 dash.home.MetricViewer=Metric Viewer
+dash.home.EscalationSummary=Current Escalations
 
 dash.home.ProblemResources.seeAll=[See All]
 dash.home.ProblemResources.timeRange=From {0} to {1}.
