[HQ-513] Add Kerberos configuration properties labels

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -540,6 +540,11 @@ admin.settings.LDAPSslLabel=SSL:
 admin.settings.LDAPLoginPropertyLabel=Login Property:
 admin.settings.LDAPSearchBaseLabel=Search Base:
 
+admin.settings.KRBConfigPropTab=Kerberos Configuration Properties
+admin.settings.KRBRealm=Realm:
+admin.settings.KRBKDC=KDC:
+admin.settings.KRBDebug=Debug:
+
 admin.settings.SNMPConfigPropTab=SNMP Server Configuration Properties
 admin.settings.SNMPVersion=SNMP Protocol Version:
 admin.settings.SNMPNone=SNMP Not Enabled
