Add new Escalation Summary portlet

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -671,6 +671,7 @@ dash.home.AddContent.select=Select Portlet
 .dashContent.problemResources=Problem Resources
 .dashContent.availSummary=Availability Summary
 .dashContent.metricViewer=Metric Viewer
+.dashContent.escalationSummary=Escalation Summary
 
 dash.autoDiscovery.import.Error=Unable to import platform : {0}
 dash.autoDiscovery.import.ignore.Error=Servers already in the inventory cannot be ignored
