[HHQ-686] Consolidate APIs and show groups to select from for Resource Hub

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -865,6 +865,8 @@ resource.hub.filter.ServiceType=Service Type
 resource.hub.filter.GroupApp=Application
 resource.hub.filter.GroupGroup=Group
 resource.hub.filter.GroupPSS=Platform, Server & Service
+resource.hub.filter.GroupLabel=Group:
+resource.hub.filter.AllGroupOption=All Groups
 
 resource.hub.PlatformTypeTH=Platform Type
 resource.hub.ServerTypeTH=Server Type
