added which characters are illegal to the text string for the email address error validation in Escalation Administration

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2076,7 +2076,7 @@ events.alert.AlertNotificationActionTitle=Alert Notification Action
 # MONITORING: EVENTS: ERRORS / CONFIRMATIONS
 alert.config.error.InvalidEmailAddress=The email addresses {0} has invalid syntax: {1}.
 alert.config.error.InvalidEmailAddresses=One or more of the email addresses entered had invalid syntax: {0}.
-alert.config.error.invalidEmailAddressInput=One or more of the email addresses entered has illegal characters.
+alert.config.error.invalidEmailAddressInput=One or more of the email addresses entered has illegal characters such as: [()<>;:\/"
 alert.config.error.noEmailAddressInput=You have not entered any email addresses in.
 alert.config.error.noMetaInput=Please enter Sys log meta information
 alert.config.error.noProductInput=Please enter Sys log product information
