Update hq-server.conf for new HA properties.

--- a/installer/data/hq-server.conf
+++ b/installer/data/hq-server.conf
@@ -110,38 +110,35 @@ server.quartzDelegate=${server.quartzDelegate}
 ################################################################################
 
 #
-# Property: server.cluster.mode
-#
-# This property indicates if the HQ server is clustered, and if so, what
-# cluster mode it is in.  Valid values for this property are:
-#
-#   STANDALONE
-#       : a non-clustered HQ server installation
-#
-#   CLUSTER-MASTER
-#       : for clustered HQ server installations, indicates that
-#         this HQ server is the cluster master - it runs the 
-#         availcheck service, the schedule verification service, 
-#         and the data purge service.  The cluster-master can also
-#         process agent data like any other CLUSTER-DATAPROCESSOR 
-#         server node.  Every HQ server cluster must have exactly
-#         one CLUSTER-MASTER node.
-#
-#   CLUSTER-GUI
-#       : for clustered HQ server installations, indicates that 
-#         this HQ server is a GUI server.
-#
-#   CLUSTER-DATAPROCESSOR
-#       : for clustered HQ server installations, indicates that
-#         this HQ server is a data-processing server
-#
-server.cluster.mode=STANDALONE
-
+# Property: ha.partition
 # 
-# Property: server.ha.bind_addr
-# 
-# In one of the clustered modes, the local IP to bind the multicast listener to.
-# In non-clustered mode (standalone), this setting has no effect.
-server.ha.bind_addr=${server.ha.bind_addr}
+# This property defines the name of the HQ cluster.  Each HQ server with the 
+# same ha.partition name will join the same cluster.  This property is required
+# for proper cluster initialization.
+#
+#ha.partion=
 
+#
+# Property: ha.node.address
+#
+# This property defines the IP address or hostname to bind the multicast listener
+# to.  This property is required for proper cluster initialization.
+#
+#ha.node.address=
+
+#
+# Property: ha.node.mcast_addr
+#
+# This property defines the multicast address to use.  This property is not required
+# and defaults to 228.1.2.3.
+#
+#ha.node.mcast_addr=228.1.2.3
+
+#
+# Property ha.node.mcast_port
+#
+# This property defines the multicast port to use.  This property is not required
+# and defaults to 45566.
+#
+#ha.node.mcast_port=45566
 
