Add HA configuration for EHCache.

--- a/installer/data/hq-server.conf
+++ b/installer/data/hq-server.conf
@@ -142,3 +142,17 @@ server.quartzDelegate=${server.quartzDelegate}
 #
 #ha.node.mcast_port=45566
 
+#
+# Property ha.node.cacheListener.port
+#
+# This property defines the multicast port that is used to discover cache peers.  This
+# property is not required and defaults to 45567
+#ha.node.cacheListener.port=45567
+
+#
+# Property ha.node.cacheProvider.port
+#
+# This property defines the multicast port that is used to synchronize caches throughout
+# the HQ cluster.  This property is not required and defaults to 45568.
+#ha.node.cacheProvider.port=45568
+
