text change/addition to the administration links page to explain what is under the links and get rid of the word configuration

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -480,8 +480,8 @@ admin.home.NewRole=New Role...
 admin.home.ListRoles=List Roles
 
 admin.home.Settings=Settings:
-admin.home.ServerConfig=HQ Server Configuration
-admin.home.ResourceTemplates=Monitoring Defaults Configuration
+admin.home.ServerConfig=HQ Server Settings
+admin.home.ResourceTemplates=Monitoring Defaults
 admin.home.EscalationSchemes=Escalation Schemes Configuration
 
 # ADMIN.SETTINGS
@@ -2650,3 +2650,6 @@ inform.config.escalation.scheme.newAction.dragaction=Drag individual actions to 
 inform.config.escalation.scheme.newAction.noactions=Currently there are no actions for this escalation. Click on the "Create Action" button below to create an action to perform when this escalation is invoked.
 inform.config.escalation.scheme.inProgressEscalation=If you edit an escalation that is currently in progress, the escalation will be stopped.
 inform.config.escalation.scheme.NoOP=Suppress Additional Alerts
+inform.config.admin.HQServerConfig=Change settings for email, data compression, database maintenance and authentication services
+inform.config.admin.MonitoringDefaults=Define monitoring policies for the entire environment
+inform.config.admin.EscalationScheme=Define global escalation schemes that can be applied to individual alerts
