adding key for the admin page for ee

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2650,6 +2650,7 @@ inform.config.escalation.scheme.newAction.dragaction=Drag individual actions to 
 inform.config.escalation.scheme.newAction.noactions=Currently there are no actions for this escalation. Click on the "Create Action" button below to create an action to perform when this escalation is invoked.
 inform.config.escalation.scheme.inProgressEscalation=If you edit an escalation that is currently in progress, the escalation will be stopped.
 inform.config.escalation.scheme.NoOP=Suppress Additional Alerts
-inform.config.admin.HQServerConfig=Change settings for email, data compression, database maintenance and authentication services
-inform.config.admin.MonitoringDefaults=Define monitoring policies for the entire environment
-inform.config.admin.EscalationScheme=Define global escalation schemes that can be applied to individual alerts
+inform.config.admin.HQServerConfig= - Change settings for email, data compression, database maintenance and authentication services
+inform.config.admin.MonitoringDefaults= - Define monitoring policies for the entire environment
+inform.config.admin.PolicyDefaults= - Define monitoring and alerting policies for the entire environment
+inform.config.admin.EscalationScheme= - Define global escalation schemes that can be applied to individual alerts
