Fix ha.partition typo.

--- a/installer/data/hq-server.conf
+++ b/installer/data/hq-server.conf
@@ -116,7 +116,7 @@ server.quartzDelegate=${server.quartzDelegate}
 # same ha.partition name will join the same cluster.  This property is required
 # for proper cluster initialization.
 #
-#ha.partion=
+#ha.partition=
 
 #
 # Property: ha.node.address
