--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2041,7 +2041,7 @@ alerts.alert.AlertList.ListHeader.AlertDefinition=Alert Definition
 alerts.alert.AlertList.ListHeader.AlertCondition=Alert Condition
 alerts.alert.AlertList.ListHeader.ActualValue=Actual Value
 alerts.alert.AlertList.ListHeader.Fixed=Fixed
-alerts.alert.AlertList.ListHeader.Acknowledge=Acknowledge
+alerts.alert.AlertList.ListHeader.Acknowledge=Ack
 
 alerts.config.DefinitionList.Title=HQ List Alert Definitions
 alerts.config.DefinitionList.ListHeader.AlertName=Alert Name
