Add Announcement properties to server settings

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -490,9 +490,11 @@ admin.settings.EditServerConfig.PageTitle=Edit HQ Server Settings
 
 admin.settings.RestartNote=<b>NOTE:</b>Any changes to HQ Server Settings will take effect after the next server restart.
 admin.settings.EmailConfigTab=HQ Email Configuration Properties
+admin.settings.UpdateConfigTab=HQ Announcements Properties
 admin.settings.SMTPHostLabel=SMTP Host:
 admin.settings.BaseURL=Base URL:
 admin.settings.SenderEmailAddressLabel=From Email Address:
+admin.settings.AnnouncementType=HQ Version and Security Announcements:
 admin.settings.MiscConfigTab=Miscellaneous Configuration Properties
 admin.settings.DisableGuide=Disable HQ Guide for All Users (restart the HQ server after changing this setting)
 
@@ -512,6 +514,8 @@ admin.settings.AlertPurge=Delete Alerts Older Than:
 admin.settings.Reindex=Reindex Metric Data Tables Nightly:
 admin.settings.EventLogPurge=Delete Events and Logs Older Than:
 
+admin.settings.All=All
+admin.settings.Major=Major
 admin.settings.Day=day
 admin.settings.Days=days
 admin.settings.Hour=hour
@@ -2650,7 +2654,7 @@ inform.config.escalation.scheme.newAction.dragaction=Drag individual actions to 
 inform.config.escalation.scheme.newAction.noactions=Currently there are no actions for this escalation. Click on the "Create Action" button below to create an action to perform when this escalation is invoked.
 inform.config.escalation.scheme.inProgressEscalation=If you edit an escalation that is currently in progress, the escalation will be stopped.
 inform.config.escalation.scheme.NoOP=Suppress Additional Alerts
-inform.config.admin.HQServerConfig= - Change settings for email, data compression, database maintenance and authentication services
+inform.config.admin.HQServerConfig= - Change settings for email, announcements, data compression, database maintenance and authentication services
 inform.config.admin.MonitoringDefaults= - Define monitoring policies for the entire environment
 inform.config.admin.PolicyDefaults= - Define monitoring and alerting policies for the entire environment
 inform.config.admin.EscalationScheme= - Define global escalation schemes that can be applied to individual alerts
