--- a/build.xml
+++ b/build.xml
@@ -295,7 +295,7 @@
 
     <copy todir="${ear.dir}/META-INF" overwrite="true">
         <fileset dir="etc" 
-                 includes="application.xml,jboss-app.xml,startup_classes.txt" />
+                 includes="application.xml,jboss-app.xml,startup_classes.txt,tweak.properties" />
         <fileset dir="${build.dir}/classes/META-INF">
             <include name="**/*.hbm.xml" />
             <include name="*.cfg.xml" />
