[HQ-580] Remove scheduling and recurrence for auto-discovery

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1479,10 +1479,10 @@ resource.autodiscovery.autoDiscoveryProperties.DateStarted=Date Started:
 resource.autodiscovery.autoDiscoveryProperties.DateCompleted=Date Completed:
 
 resource.autodiscovery.AutoDiscoveryHeaderTab=Quick Auto-Discovery Scan
-resource.autodiscovery.AutoDiscoveryHeader.windows=Click 'OK' to start an immediate system scan.  This will include a scan of the Windows registry and process table.<br>If you also want to perform a filesystem scan or if you'd like to schedule a recurring scan, fill out the remainder of the form below.
-resource.autodiscovery.AutoDiscoveryHeader.unix=Click 'OK' to start an immediate system scan.  This will include a scan of the system process-table.<br>If you also want to perform a filesystem scan or if you'd like to schedule a recurring scan, fill out the remainder of the form below.
-resource.autodiscovery.AutoDiscoveryHeader.windows.AIonly=Click 'OK' to start an immediate system scan.  This will include a scan of the Windows registry and process table.<br>If you also want to perform a filesystem scan, fill out the remainder of the form below.
-resource.autodiscovery.AutoDiscoveryHeader.unix.AIonly=Click 'OK' to start an immediate system scan.  This will include a scan of the system process-table.<br>If you also want to perform a filesystem scan, fill out the remainder of the form below.
+resource.autodiscovery.AutoDiscoveryHeader.windows=Click 'OK' to start an immediate system scan on all resource types.  This will include a scan of the Windows registry and process table.<br>If you also want to perform a filesystem scan or if you'd like to limit the resource types to be discovered, fill out the remainder of the form below.
+resource.autodiscovery.AutoDiscoveryHeader.unix=Click 'OK' to start an immediate system scan on all resource types.  This will include a scan of the system process-table.<br>If you also want to perform a filesystem scan or if you'd like to limit the resource types to be discovered, fill out the remainder of the form below.
+resource.autodiscovery.AutoDiscoveryHeader.windows.AIonly=Click 'OK' to start an immediate system scan on all resource types.  This will include a scan of the Windows registry and process table.<br>If you also want to perform a filesystem scan, fill out the remainder of the form below.
+resource.autodiscovery.AutoDiscoveryHeader.unix.AIonly=Click 'OK' to start an immediate system scan on all resource types.  This will include a scan of the system process-table.<br>If you also want to perform a filesystem scan, fill out the remainder of the form below.
 
 resource.autodiscovery.scan.NoScanConfig=This scan method does not have any scan properties.
 resource.autodiscovery.ScanTab=Extended Filesystem Scan Configuration
