Change wording for update buttons

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -108,9 +108,11 @@ login.info.session.timeout="your session is timed out. please login agian"
 login.title=HQ Login
 login.message=&nbsp;
 
-#
+# Header
 header.RecentAlerts=Recent Alerts
 header.NoRecentAlerts=(There are no alerts in the last 2 hours.)
+header.RemindLater=Remind Later
+header.Acknowledge=Acknowledge
 
 #
 securityAlert.SecurityAlert.Title=HQ Security Alert
